--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,16 +26,9 @@ jobs:
       - PATH=/tmp/sbin:$PATH
 
     steps:
-      - run: |
-              sudo apt-get update
-              sudo apt-get install -y libusb-1.0-0-dev libdbus-glib-1-dev libbluetooth-dev libnl-genl-3-dev libibverbs-dev libssl-dev libssl0.9.8 libssl1.0.0 libdnet-dev libsmi2-dev libcap-ng-dev libpcap-dev
-      - run: |
-              cd ..
-              git clone --depth 3 --branch=master --quiet git://github.com/the-tcpdump-group/tcpdump.git
-              cd tcpdump
-              ./configure --prefix=/tmp
-              make
-              sudo make install
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y libusb-1.0-0-dev libdbus-glib-1-dev libbluetooth-dev libnl-genl-3-dev libibverbs-dev libssl-dev libssl0.9.8 libssl1.0.0 libdnet-dev libsmi2-dev libcap-ng-dev libpcap-dev
+      - run: cd .. && git clone --depth 3 --branch=master --quiet git://github.com/the-tcpdump-group/tcpdump.git && cd tcpdump && ./configure --prefix=/tmp && make && sudo make install
       - checkout
       - run: go version
       - run: go vet ./...
