--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,20 @@ jobs:
                     make
                     sudo make install
       - run: go vet ./...
-      - run: PATH=/tmp/sbin:$PATH go test -v ./...
+      - run:
+          name: Run go tests
+          environment:
+            GOTESTSUM_JUNITFILE: /tmp/test-reports/gotests/junit.xml
+          command: |
+                    mkdir -p /tmp/test-reports/gotests
+                    PATH=/tmp/sbin:$PATH gotestsum
       - run:
           name: codecov
           command: |
                     PATH=/tmp/sbin:$PATH go test -race -coverprofile=coverage.txt -covermode=atomic
                     bash <(curl -s https://codecov.io/bash)
+      - store_test_results:
+          path: /tmp/test-reports
 
   build-1.12:
     <<: *build-template
