--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,28 @@
   "extends": [
     "config:base"
   ],
-  "assignees": ["x-way"],
-  "reviewers": ["x-way"]
+  "assignees": [
+    "x-way"
+  ],
+  "reviewers": [
+    "x-way"
+  ],
+  "labels": [
+    "renovate"
+  ],
+  "postUpdateOptions": [
+    "gomodTidy"
+  ],
+  "packageRules": [
+    {
+      "updateTypes": [
+        "digest",
+        "patch"
+      ],
+      "packagePatterns": [
+        "^golang.org/x/"
+      ],
+      "schedule": ["after 6pm"]
+    }
+  ]
 }
