--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,12 +80,12 @@ jobs:
             GOTESTSUM_JUNITFILE: /tmp/test-reports/gotests/junit.xml
           command: |
                     mkdir -p /tmp/test-reports/gotests
-                    PATH=/tmp/sbin:$PATH gotestsum
+                    PATH=/tmp/bin:$PATH gotestsum
       - run:
           name: Create coverage report
           command: |
                     mkdir -p /tmp/test-artifacts
-                    PATH=/tmp/sbin:$PATH go test -race -coverprofile=coverage.txt -covermode=atomic
+                    PATH=/tmp/bin:$PATH go test -race -coverprofile=coverage.txt -covermode=atomic
                     go tool cover -html=coverage.txt -o coverage.html
                     mv coverage.html /tmp/test-artifacts
       - run:
