--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
       - run:
           name: Check gofumpt formatting
           command: |
-                    go get mvdan.cc/gofumpt/gofumpt
+                    go get mvdan.cc/gofumpt
                     gofumpt -d .
                     [ -z "$(gofumpt -l .)" ]
       - run:
