--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,11 @@ jobs:
           command: |
                     sudo apt-get update
                     sudo apt-get install -y libusb-1.0-0-dev
-                    sudo apt-get install -y libdbus-glib-1-dev
+                    sudo apt-get install -y libdbus-1-dev
                     sudo apt-get install -y libbluetooth-dev
                     sudo apt-get install -y libnl-genl-3-dev
                     sudo apt-get install -y libibverbs-dev
                     sudo apt-get install -y libssl-dev
-                    sudo apt-get install -y libdnet-dev
                     sudo apt-get install -y libsmi2-dev
                     sudo apt-get install -y libcap-ng-dev
                     sudo apt-get install -y libpcap-dev
